# twistyeditor

./: .gitmodules  README.md  asset-manifest.json  config-overrides.js  index.html  package-lock.json  package.json  precache-manifest.356c0a28f5ea7d9383a78edaa6052319.js  precache-manifest.b9e0d588de35d0a51ea0245ab6ad8592.js  precache-manifest.f2059ee7278ac91347cef9dbf546df6c.js  precache-manifest.f99bfc715908e2c6d0f5e1b00d10d1fe.js  service-worker.js
core/: CMakeLists.txt  Simulation.cpp  Simulation.h  TwistyEditor.h  TwistyEditor.idl
docs/: asset-manifest.json  index.html  precache-manifest.433d2f3eb20b58ac2fdc8f246ba29061.js  service-worker.js
docs/res/: environment_ibl.ktx  environment_skybox.ktx  knob.filamesh
docs/static/css/: main.e4d0ed32.chunk.css  main.e4d0ed32.chunk.css.map
docs/static/js/: 2.557a44cd.chunk.js  2.557a44cd.chunk.js.map  main.a6744e2b.chunk.js  main.a6744e2b.chunk.js.map
filament/: actuator.mat  filagen.sh  ghost.mat  ground.mat  highcol.mat  knob.mat  prism.mat
public/: index.html  manifest.json  training.js  training.wasm  worker.js
public/res/: actuator.filamat  actuator.filamesh  environment_skybox.ktx  figures.rsf  ghost.filamat  ground.filamat  highcol.filamat  knob.filamat  prism.filamat  prism.filamesh
raw/: convertsdf.sh  prism.blend
res/: environment_ibl.ktx  ghost.filamat  ground.filamat  highcol.filamat  knob.filamat  knob.filamesh  prism.filamat  section.filamesh
simulation/: CMakeLists.txt  compile.sh
simulation/env/: GoalPhysicsEnv.cpp  PhysicsEnv.h  TwistyEnv.cpp
simulation/src/: Simulation.cpp  Types.h
src/: Actuator.js  Agent.js  App.css  App.js  Collision.js  ColorPicker.js  Config.js  Exporter.js  Learning.js  Mesh.js  NotebookExporter.js  OUActionNoise.js  Placeable.js  PlaceableView.js  Prism.js  PrismView.js  ReplayBuffer.js  RigidInfo.js  Section.js  Shape.js  ShapeFolder.js  ShapeView.js  Simulation.js  Toolbar.js  Trainer.js  Transform.js  UrdfExporter.js  VecMath.js  VecMath.test.js  Viewport.js  Worker.worker.js  convert.js  train.js
static/css/: main.769848a0.chunk.css  main.769848a0.chunk.css.map  main.779a5500.css  main.779a5500.css.map  main.b856fcbb.chunk.css  main.b856fcbb.chunk.css.map
static/js/: 2.24279ad2.chunk.js  2.24279ad2.chunk.js.map  2.52af8bf1.chunk.js  2.87cabae6.chunk.js  2.87cabae6.chunk.js.map  2.93e32047.chunk.js  2.9e5ddb71.chunk.js  2.9e5ddb71.chunk.js.map  2.b562de93.chunk.js  2.b562de93.chunk.js.map  2.efdfaeb2.chunk.js  Worker.worker.31d139a7.worker.js  Worker.worker.31d139a7.worker.js.map  Worker.worker.494ed041.worker.js  Worker.worker.494ed041.worker.js.map  Worker.worker.c6411d8a.worker.js  Worker.worker.c6411d8a.worker.js.map  Worker.worker.d2124e10.worker.js  Worker.worker.d2124e10.worker.js.map  main.0a21477d.chunk.js  main.0a21477d.chunk.js.map  main.14e156b7.chunk.js  main.14e156b7.chunk.js.map  main.28e784dc.chunk.js  main.28e784dc.chunk.js.map  main.2c716421.chunk.js  main.2c716421.chunk.js.map  main.2cbb5254.chunk.js  main.2cbb5254.chunk.js.map  main.467aab9f.chunk.js  main.467aab9f.chunk.js.map  main.6828d79a.js  main.6828d79a.js.map  main.7ad6f1de.chunk.js  main.7ad6f1de.chunk.js.map  main.910cfcff.chunk.js  main.910cfcff.chunk.js.map  runtime-main.7b0c9671.js  runtime-main.7b0c9671.js.map  runtime-main.a9ff1930.js  (+2 more)
train/: TwistyEnv.py  run.py
train/data/: Cat.twy  Cat.urdf
training/: .gitignore  CMakeLists.txt  compile.sh  compile_emscripten.sh  compile_standalone.sh  compile_torch.sh  compile_training.sh  ops.yaml
training/env/: GoalPhysicsEnv.cpp  GoalPhysicsEnv.h  PhysicsEnv.cpp  PhysicsEnv.h  TwistyEnv.cpp  TwistyEnv.h
training/patches/: cpuinfo.patch  pytorch.patch
training/src/: Coach.cpp  Coach.h  Config.h  Environment.cpp  Environment.h  Model.cpp  Model.h  Network.cpp  Network.h  Playing.cpp  ReplayBuffer.cpp  ReplayBuffer.h  Training.cpp  Training_emscripten.cpp  Training_main.cpp  Training_standalone.cpp  Types.h
training/src/mlpack/: arma_config.hpp  mlpack_export.hpp
